# run-tracker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  architecture.d2  build_and_deploy_lambda.sh  buildspec.yml  docker-compose.yaml  flask_app.Dockerfile  get_aws_creds.sh  invoke_lambda.py  lambda.Dockerfile  mvp.Dockerfile  pr-check-buildspec.yml  pyproject.toml  taskdef.json
.github/workflows/: main.yml
images/: architecture.d2
notebooks/: activities.ipynb  jupyter_funcs.py
run_tracker/src/: garmindb_cli.py
src/: async_calls.py  coach.py  config.py  context.py  download_and_import_separately.py  dummy_function.py  garmindb_cli.py  get_activities.py  main.py  setup_config.py  web_app.py
src/fetch_and_suggest/: __init__.py  coach.py  coach_and_formatter.py  garmindb_cli.py  get_activities.py  get_from_garmin.py  main.py  setup_config.py  training.py
src/templates/: index.html
tests/unit/: __init__.py  test_coach.py  test_dummy_function.py
tests/unit/fetch_and_suggest/: __init__.py  test_coach.py
