[tool.poetry]
name = "run_tracker"
version = "0.1.0"
description = ""
authors = ["Ben Dixon <uk.bendixon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
garmindb = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
